<resources>
	<string name="app_name">EpiAndroid</string>

	<string name="title_activity_login">Login</string>
	<string name="prompt_login">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_log_in">Log In</string>
	<string name="action_disconnect">Disconnect</string>
	<string name="error_invalid_login">Incorrect email format</string>
	<string name="error_incorrect_cred">Incorrect email/password combinaison</string>
	<string name="error_field_required">This field is required</string>
	<string name="remember_me">Remember me</string>

	<string name="title_activity_home">Home</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>


	<string name="title_activity_alerts">Messages</string>
	<string name="title_activity_trombi">Trombi</string>
	<string name="title_activity_modules">Modules</string>
	<string name="title_activity_projects">Projects</string>
	<string name="title_activity_marks">Marks</string>
	<string name="title_activity_planning">Planning</string>
	<string name="title_activity_events">Events</string>
	<string name="title_activity_susies">Susies</string>


	<string name="action_settings">Settings</string>
	<string name="empty_marks">No recent marks</string>
	<string name="recent_marks">Recent Marks</string>
	<string name="empty_deliveries">No deliveries this week</string>
	<string name="week_deliveries">This Week Deliveries</string>
	<string name="empty_tomorrow">Nothing to do tomorrow</string>
	<string name="tomorrow_activities">Tomorrow Activities</string>
	<string name="empty_today">Nothing to do today</string>
	<string name="today_activities">Today Activities</string>
	<string name="token">Token</string>
	<string name="log_time">Log Time : 0h</string>
	<string name="zero">0</string>
	<string name="four">4</string>
	<string name="student_login">Student\'s email</string>
	<string name="search">Search</string>
	<string name="trombi">Trombinoscope</string>
	<string name="title_activity_notifs">Notifications</string>
	<string name="empty_messages">No messages for now</string>
	<string name="empty_alerts">No alerts, congratulations !</string>

	<string-array name="country_arrays">
		<item>All current semester modules</item>
		<item>Only enrolled modules selected</item>
		<item>Only enrolled activities selected</item>
	</string-array>
</resources>
