<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/group_home" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home"
			android:title="@string/title_activity_home"/>
	</group>

	<group android:id="@+id/group_classes" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_modules"
			android:icon="@drawable/ic_class"
			android:title="@string/title_activity_modules"/>
		<item
			android:id="@+id/nav_projects"
			android:icon="@drawable/ic_extension"
			android:title="@string/title_activity_projects"/>
	</group>

	<group android:id="@+id/group_activities" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_planning"
			android:icon="@drawable/ic_planning"
			android:title="@string/title_activity_planning"/>
		<item
			android:id="@+id/nav_trombi"
			android:icon="@drawable/ic_trombi"
			android:title="@string/title_activity_trombi"/>
		<item
			android:id="@+id/nav_notifs"
			android:icon="@drawable/ic_notifs"
			android:title="@string/title_activity_notifs"/>
	</group>

	<group android:id="@+id/group_diconnect" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_login"
			android:icon="@drawable/ic_disconnect"
			android:title="@string/action_disconnect"/>
	</group>

</menu>
