<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:fillViewport="true"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".MainActivity"
              tools:showIn="@layout/app_bar_main">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:cardElevation="4sp">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:id="@+id/titleToday"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/today_activities"
					android:textStyle="bold"
					android:textSize="17sp"/>

				<TextView
					android:id="@+id/emptyToday"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:visibility="gone"
					android:text="@string/empty_today"/>
				<ListView
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:layout_height="0dp"
					android:id="@+id/listToday"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>


		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:cardElevation="4sp">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:id="@+id/titleTomorrow"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/tomorrow_activities"
					android:textStyle="bold"
					android:textSize="17sp"/>

				<TextView
					android:id="@+id/emptyTomorrow"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:visibility="gone"
					android:text="@string/empty_tomorrow"/>

				<ListView
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:layout_height="0dp"
					android:id="@+id/listTomorrow"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:cardElevation="4sp">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:id="@+id/titleDeliveries"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/week_deliveries"
					android:textStyle="bold"
					android:textSize="17sp"/>

				<TextView
					android:id="@+id/emptyDeliveries"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:visibility="gone"
					android:text="@string/empty_deliveries"/>

				<ListView
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:layout_height="0dp"
					android:id="@+id/listDeliveries"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:cardElevation="4sp">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:id="@+id/titleMarks"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/recent_marks"
					android:textStyle="bold"
					android:textSize="17sp"/>

				<TextView
					android:id="@+id/emptyMarks"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:visibility="gone"
					android:text="@string/empty_marks"/>

				<ListView
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:layout_height="0dp"
					android:id="@+id/listMarks"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>
	</LinearLayout>
</ScrollView>
