<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="theleatherguy.epiandroid.LoginActivity"
              android:orientation="vertical"
              android:baselineAligned="false">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/view">
	    <EditText
		    android:id="@+id/editLogin"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/prompt_login"
		    android:maxLines="1"
		    android:singleLine="true"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp">
		<EditText
			android:id="@+id/editPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/prompt_password"
			android:maxLines="1"
			android:singleLine="true"
			android:layout_below="@+id/view"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="10dp"
			android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/remember_me"
		android:id="@+id/checkRemember"
		android:layout_marginTop="20dp"
		android:layout_gravity="start"/>

	<Button
		android:id="@+id/bConnect"
		style="?android:textAppearanceSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/action_log_in"
		android:textStyle="bold"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		/>

</LinearLayout>
