<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:paddingLeft="50dp"
              android:paddingRight="50dp"
              android:paddingTop="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profilePanel">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trombi"
                android:id="@+id/textTrombi"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">
                <EditText
                    android:id="@+id/editTrombi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:gravity="center"
                    android:hint="@string/student_login"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bSearch"
                android:layout_gravity="center_horizontal"
                android:text="@string/search"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"/>

            <include layout="@layout/loading_panel"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>