<?xml version="1.0" encoding="utf-8"?>
<!-- in a real application you should use styles and dimens... -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:fillViewport="true"
              android:paddingTop="@dimen/tab_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".MainActivity">

    <include layout="@layout/loading_panel"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profilePanel">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                android:id="@+id/userInfos">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:id="@+id/profilePicture"
                    android:src="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textFullName"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_toRightOf="@+id/profilePicture"
                    android:layout_toEndOf="@+id/profilePicture"
                    android:layout_alignTop="@+id/profilePicture"
                    android:layout_marginLeft="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textYearCourse"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/textFullName"
                    android:layout_alignLeft="@+id/textFullName"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCity"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentTop="false"
                    android:layout_below="@+id/textYearCourse"
                    android:layout_alignLeft="@+id/textYearCourse"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/GPA"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textGPA"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleY="2"
                    android:id="@+id/barGPA"
                    android:layout_below="@+id/textGPA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:max="400"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/barGPA"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignLeft="@+id/barGPA"
                    android:text="@string/zero"
                    android:id="@+id/textGPAMin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:id="@+id/textGPAMax"
                    android:layout_alignBaseline="@+id/textGPAMin"
                    android:layout_alignBottom="@+id/textGPAMin"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/Credits"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCredits"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleY="2"
                    android:id="@+id/barCredits"
                    android:layout_below="@+id/textCredits"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:max="60"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/barCredits"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignLeft="@+id/barCredits"
                    android:id="@+id/textCreditsMin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCreditsMax"
                    android:layout_alignBaseline="@+id/textCreditsMin"
                    android:layout_alignBottom="@+id/textCreditsMin"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/Log"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_time"
                    android:id="@+id/textLog"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleY="2"
                    android:id="@+id/barLog"
                    android:layout_below="@+id/textLog"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/barLog"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignLeft="@+id/barLog"
                    android:text="@string/zero"
                    android:id="@+id/textLogMin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/textLogMax"
                    android:layout_alignBaseline="@+id/textLogMin"
                    android:layout_alignBottom="@+id/textLogMin"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>